--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cpp-tooling",
-  "version": "1.0.0",
+  "name": "@dotchris90/cpp-tooling",
+  "version": "0.1.0",
   "description": "API to access conan, cmake, dot, doxygen, etc.",
   "main": "dist/cpp-tooling.js",
   "umd:main": "dist/cpp-tooling.umd.js",
