--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "forceConsistentCasingInFileNames": true,
     "outDir": "dist",
     "declaration": true,
+    "strictNullChecks": false,
     "declarationDir": "dist"
   },
   "exclude": [
