--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "readme.md"
   ],
   "types": "dist/index.d.ts",
-  "dependencies": {},
+  "dependencies": {
+    "@types/command-exists": "^1.2.0",
+    "command-exists": "^1.2.9"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.14",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
