--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "types": "dist/index.d.ts",
   "dependencies": {
     "@types/command-exists": "^1.2.0",
-    "command-exists": "^1.2.9"
+    "@types/fs-extra": "^9.0.13",
+    "command-exists": "^1.2.9",
+    "fs-extra": "^10.1.0",
+    "fse": "^4.0.1",
+    "@dotchris90/utils-extensions": "^0.0.4"
   },
   "devDependencies": {
     "@types/jest": "^26.0.14",
