--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   ],
   "types": "dist/index.d.ts",
   "dependencies": {
+    "@dotchris90/utils-extensions": "^0.0.4",
     "@types/command-exists": "^1.2.0",
     "@types/fs-extra": "^9.0.13",
     "command-exists": "^1.2.9",
     "fs-extra": "^10.1.0",
-    "fse": "^4.0.1",
-    "@dotchris90/utils-extensions": "^0.0.4"
+    "fse": "^4.0.1"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.14",
+    "@types/jest": "^26.0.24",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
     "eslint": "^7.9.0",
