--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "prepublish": "npm run build",
     "build": "microbundle -o dist/ --sourcemap false --compress false",
     "dev": "microbundle watch -o dist/ --sourcemap false --compress false",
-    "test": "jest --coverage",
+    "test": "jest --coverage --silent=false",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ."
   },
   "repository": {
