--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "ES2020",
+    "target": "es2020",
+    "module": "es2020",
     "lib": ["es2021"],
     "strict": true,
     "esModuleInterop": true,
