--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es2020",
     "module": "es2020",
     "alwaysStrict": true,
-    "lib": ["es2021"],
+    "lib": ["ES2021.String"],
     "strict": true,
     "esModuleInterop": true,
     "moduleResolution": "Node",
@@ -13,6 +13,7 @@
     "strictNullChecks": false,
     "declarationDir": "dist"
   },
+  "include": ["src/**/*.ts"],
   "exclude": [
     "node_modules",
     "dist"
