--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "debug": "tsc --sourcemap",
     "try": "node dist/main.js",
     "build": "shx rm -rf dist && tsc -b",
+    "postbuild": "shx cp -R src/Templates dist",
     "dev": "microbundle watch -o dist/ --sourcemap false --compress false",
     "test": "jest --coverage --silent=false",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ."
